# LinuxSysMon

./: .gitignore  CMakeLists.txt  README.md  activate.sh  gitignore
docs/: .~lock.Project Overview.odt#  Project Overview.odt
src/: main  main.cpp
src/core/: cpu_monitor  cpu_monitor.cpp  cpureader  disk_io_monitor  disk_io_monitor.cpp  memory_monitor  memory_monitor.cpp  system_monitor  system_monitor.cpp
src/ui/: README.md  cpu_view.py  gauge_factory.py  gauge_widget.py  main.py  main_window.py  resource_gauge_widget.py  styles.qss  system_data_view.py
